@@ -14,6 +14,12 @@ from os import path
 
 from eiffel_loop import platform as system
 
+global key_c_compiler, key_library, key_precomp
+
+key_c_compiler = 'ISE_C_COMPILER'
+key_library = 'ISE_LIBRARY'
+key_precomp = 'ISE_PRECOMP'
+
 def precompile_template():
 	if os.name == 'nt':
 		result = r"~\Documents\Eiffel User Files\%s\precomp\spec\%s"
@@ -26,29 +32,30 @@ def version ():
 	result = path.basename (eiffel).split ('_')[1]
 	return result
 
-eiffel = environ ['ISE_EIFFEL']
-platform = environ ['ISE_PLATFORM']
-library = environ ['ISE_LIBRARY']
+def update ():
+	global eiffel, platform, library, c_compiler, precomp
 
-key_c_compiler = 'ISE_C_COMPILER'
-key_library = 'ISE_LIBRARY'
-key_precomp = 'ISE_PRECOMP'
+	# update globals from environ
+	eiffel = environ ['ISE_EIFFEL']
+	platform = environ ['ISE_PLATFORM']
+	library = environ ['ISE_LIBRARY']
 
-if environ.has_key (key_c_compiler):
-	c_compiler = environ [key_c_compiler]
-elif system.is_unix ():
-	c_compiler = 'gcc'
-else:
-	c_compiler = 'msc'
+	if environ.has_key (key_c_compiler):
+		c_compiler = environ [key_c_compiler]
+	elif system.is_unix ():
+		c_compiler = 'gcc'
+	else:
+		c_compiler = 'msc'
 	
-if environ.has_key (key_library):
-	library = environ [key_library]
-else:
-	library = eiffel
+	if environ.has_key (key_library):
+		library = environ [key_library]
+	else:
+		library = eiffel
 
-if environ.has_key (key_precomp):
-	precomp = environ [key_precomp]
-else:
-	precomp = path.expanduser (path.expandvars (precompile_template () % (version (), platform)))
+	if environ.has_key (key_precomp):
+		precomp = environ [key_precomp]
+	else:
+		precomp = path.expanduser (path.expandvars (precompile_template () % (version (), platform)))
 
+update ()
 
